# template-python-gcloud-run

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy_main.yaml  terraform-apply.yaml  terraform-destroy.yaml  terraform-plan.yaml
infra/: cloudbuild.yaml
infra/terraform/: main.tf  variables.tf
infra/terraform/config/: main.tfvars
infra/terraform/resources/: google_cloud_run_service.tf  google_cloudbuild_trigger.tf  google_service_account.tf  variables.tf
src/main/config/: app.py  logger.py  middlewares.py  routes.py  settings.py
src/main/middlewares/: cors.py  exception.py  logging.py
src/main/routes/: dtos.py  example_routes.py
src/presentation/errors/: generic_errors.py
